<resources>
    <string name="app_name">Restroom Locator</string>
    <string name="test_Button_Text">Direct me</string>
    <string name="name_one">1:</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="navSearch">Search</string>
    <string name="navRegister">Register</string>
    <string name="title_activity_register">RegisterActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registerButtonText">Register Bathroom</string>
    <string name="registerKeyReqText">Is a key required?</string>
    <string name="registerCustReqText">Do you need to be a paying customer?</string>
    <string name="registerTitleText">Register a New Restroom</string>
    <string name="commentSectionHeader">Comments</string>
    <string name="buttonAddComment">Add comment</string>
</resources>
