<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jason.restroomlocator.MoreInfoActivity">

    <TextView
        android:id="@+id/moreInfoName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <CheckBox
        android:id="@+id/moreInfoKeyReq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:clickable="false"
        android:text="@string/registerCustReqText"
        app:layout_constraintTop_toBottomOf="@+id/moreInfoCustReq"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/moreInfoRatingBar" />

    <CheckBox
        android:id="@+id/moreInfoCustReq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:clickable="false"
        android:text="@string/registerKeyReqText"
        app:layout_constraintTop_toBottomOf="@+id/moreInfoRatingBar"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/moreInfoRatingBar" />

    <RatingBar
        android:id="@+id/moreInfoRatingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/moreInfoName" />

    <ListView
        android:id="@+id/moreInfoListView"
        android:layout_width="364dp"
        android:layout_height="226dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/moreInfoCommentSectionHeader"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/moreInfoCommentSectionHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/commentSectionHeader"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/moreInfoKeyReq" />

    <Button
        android:id="@+id/moreInfoButtonAddComment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonAddComment"
        android:onClick="addComment"
        android:layout_marginRight="7dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintTop_toTopOf="@+id/moreInfoEditTextComment" />

    <EditText
        android:id="@+id/moreInfoEditTextComment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="Add your comment here..."
        android:inputType="textMultiLine"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/moreInfoButtonAddComment"
        app:layout_constraintTop_toBottomOf="@+id/moreInfoListView" />

</android.support.constraint.ConstraintLayout>
